--- a/githubpage.html
+++ b/githubpage.html
@@ -71,6 +71,9 @@ function categorizeInsput(input) {
    return 'bon';
 }
 
+//ssh utilisateur@adresse_ip_distance "d:\Pierre\EnchantUI\Server-Files-0.2.60\startserver.bat"
+//scp fichier.txt utilisateur@adresse_ip_distance:chemin/destination/
+
 b.addEventListener("click", () => {
     const iv = i.value;
     const input = iv;
