--- a/githubpage.html
+++ b/githubpage.html
@@ -14,7 +14,7 @@ const i = document.getElementById("1");
 const b = document.getElementById("2");   
 const d = document.getElementById("3");   
 
-const tokenizer = 'z'//new natural.WordTokenizer();
+const tokenizer = 'z'//new natural.WordTokenizer(); test
 
 const insultes = [
     'idiot', 'imbecile', 'cretin', "Conard", "Encule", "Salope","pnj mal code","Il pedale dans la choucroute.",
