--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<input type="text" id="1">    
+<input type="text" id="1" placeholder="f">    
 <button id="2">submit</button>
 <div id="3"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
