--- a/githubpage.html
+++ b/githubpage.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<input type="text" id="1">    
+<input type="text" id="1" placeholder="tapez votre mot ici">    
 <button id="2">submit</button>
 <div id="3"></div>
 <script>
