--- a/githubpage.html
+++ b/githubpage.html
@@ -51,7 +51,7 @@ const insultes = [
     "irritant","inutile","abject","detestable","repugnant",'merde', 'con', 'putain', 'salaud',"fdp", "debile","cretin", "cretine",
     "aberrant","idiot","idiote","mediocre","faineant", "tu n'est pas la chips la plus croustillante du paquet","enfoire","enfoiree",
     "pas la lumière la plus brillante","pas le couteau le plus aiguise du tiroir", "enfoire", "suceuse de prof","petasse","ferme la",
-    "feignant","grossier","arrogant","insolent","malhonnete","Tu n'es pas la lumière la plus brillante de l'arbre de Noël.",
+    "feignant","grossier","arrogant","insolent","malhonnete","Tu n'es pas la lumière la plus brillante de l'arbre de Noël.","vas te faire",
     "Il lui manque une case.","Il n'a pas invente l'eau tiède.","espèce de pute", "encule", "encule", "ta geule","trou du cul",
     "Elle n'a pas toute sa tete.","Tu n'es pas la moitie d'un imbecile.","tu n'est pas le marteau le plus efficace","sale folle",
     "Il est ne fatigue.","Il ne fait pas la queue du chat.", "pute", "sale arabe","sale chien", "espece de robot","je vais te violé",
