--- a/githubpage.html
+++ b/githubpage.html
@@ -17,7 +17,7 @@ const d = document.getElementById("3");
 //test
 const insultes = [
     'idiot', 'imbecile', 'cretin', "Conard", "Encule", "Salope","pnj mal code","Il pedale dans la choucroute.","nazi","hitler",
-    "Connard", "Putain", "Idiot", "Bâtard", "Fils de pute", "FDP", "Grosse merde", "Enfoire", "Cretin", "Poufiasse",
+    "Connard", "Putain", "Idiot", "Bâtard", "Fils de pute", "FDP", "Grosse merde", "Enfoire", "Cretin", "Poufiasse","nazisme",
     "vil faquin", "Salaud", "Connasse", "Pede", "Tare", "Debile", "Tete de noeud", "desembouteille des alpages", "Naze",
     "Stupide", "Imbecile", "Incompetent", "Nul", "Pathetique", "maraud", "enfoire", "Minable", "Ignorant", "Cretin",
     "Debile", "Pitoyable", "Fatiguant", "foutriquet", "Irritant", "Inutile", "Lamentable", "Miserable", "Abject","grognasse",
